Adding F-droid flavour

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,6 +37,15 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+    flavorDimensions "default"
+
+    productFlavors {
+        fdroid {
+            dimension "default"
+            applicationIdSuffix ".fdroid"
+            versionNameSuffix "-fdroid"
+        }
+    }
 }
 
 flutter {
