Fixing F-droid flavour

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,8 +42,8 @@ android {
     productFlavors {
         fdroid {
             dimension "default"
-            applicationIdSuffix ".fdroid"
-            versionNameSuffix "-fdroid"
+            applicationId = "com.aj.wa.contact.adder"
+            versionName = "1.0.0"
         }
     }
 }
