Adding APK signing

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,6 +9,14 @@ android {
     namespace = "amr.jawwad.whatsapp_contacts_adder_android"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
+    def keyPropsFile = rootProject.file("key.properties")
+    def keyProps = new Properties()
+
+    if (keyPropsFile.exists()) {
+        keyProps.load(new FileInputStream(keyPropsFile))
+    } else {
+        println "⚠️ Warning: key.properties file not found! Using debug signing."
+    }
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -30,11 +38,20 @@ android {
         versionName = flutter.versionName
     }
 
+    signingConfigs {
+        release {
+            if (keyPropsFile.exists()) {
+                storeFile file(keyProps['storeFile'])
+                storePassword keyProps['storePassword']
+                keyAlias keyProps['keyAlias']
+                keyPassword keyProps['keyPassword']
+            }
+        }
+    }
+
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
     flavorDimensions "default"
