--- a/android/.gitignore
+++ b/android/.gitignore
@@ -4,6 +4,8 @@ gradle-wrapper.jar
 /gradlew
 /gradlew.bat
 /local.properties
+/android/app/keystore.jks
+/android/key.properties
 GeneratedPluginRegistrant.java
 
 # Remember to never publicly share your keystore.
