Installing Android tools in GHA

--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -28,6 +28,15 @@ jobs:
         with:
           distribution: "zulu"
           java-version: "17"
+          
+      - name: Install Android SDK & apksigner
+        run: |
+          sudo apt update
+          sudo apt install -y wget unzip
+          wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip
+          unzip commandlinetools-linux-8512546_latest.zip -d $HOME/android-sdk
+          yes | $HOME/android-sdk/tools/bin/sdkmanager --licenses
+          $HOME/android-sdk/tools/bin/sdkmanager "platform-tools" "build-tools;30.0.3"
 
       - name: Set up Keystore
         run: |
