--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -33,12 +33,15 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y wget unzip
+          # Create the necessary directories if they don't exist
+          mkdir -p $HOME/android-sdk/cmdline-tools
           wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip
           unzip commandlinetools-linux-8512546_latest.zip -d $HOME/android-sdk/cmdline-tools
           # Move the extracted cmdline-tools to the correct folder
           mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
           yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
           $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "build-tools;30.0.3"
+
 
 
       - name: Set up Keystore
