--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -28,57 +28,12 @@ jobs:
         with:
           distribution: "zulu"
           java-version: "17"
-          
-      - name: Install Android SDK & apksigner
-        run: |
-            sudo apt update
-            sudo apt install -y wget unzip
-            # Create the necessary directories if they don't exist
-            mkdir -p $HOME/android-sdk/cmdline-tools
-            wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip
-            unzip commandlinetools-linux-8512546_latest.zip -d $HOME/android-sdk/cmdline-tools
-            # Move the extracted cmdline-tools to the correct folder
-            mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
-            yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
-            # Install platform-tools and build-tools with apksigner
-            $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "build-tools;30.0.3"
-            # Ensure apksigner is available
-            export PATH=$PATH:$HOME/android-sdk/build-tools/30.0.3
-            # Verify apksigner installation
-            apksigner --version
-
-
-
-      - name: Set up Keystore
-        run: |
-          echo "$KEYSTORE_FILE" | base64 --decode > keystore.jks
-          echo "$KEYSTORE_PASSWORD" > keystore-password.txt
-          echo "$KEY_ALIAS" > key-alias.txt
-          echo "$KEY_PASSWORD" > key-password.txt
-        env:
-          KEYSTORE_FILE: ${{ secrets.KEYSTORE_FILE }}
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
 
       - name: Build Unsigned APK
         run: flutter build apk --release --flavor fdroid
-        
-      - name: Rename APK for F-Droid
-        run: |
-          mv build/app/outputs/flutter-apk/app-fdroid-release.apk build/app/outputs/flutter-apk/app-fdroid-release-unsigned.apk
 
-
-      - name: Sign APK
-        run: |
-          export PATH=$PATH:$HOME/android-sdk/cmdline-tools/latest/bin
-          apksigner sign --ks keystore.jks --ks-pass pass:"$(cat keystore-password.txt)" \
-            --key-pass pass:"$(cat key-password.txt)" --key-alias "$(cat key-alias.txt)" \
-            --out build/app/outputs/flutter-apk/app-fdroid-release.apk \
-            build/app/outputs/flutter-apk/app-fdroid-release-unsigned.apk
-
-      - name: Upload Signed APK as Artifact
+      - name: Upload Unsigned APK as Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: fdroid-release-apk-signed
+          name: fdroid-release-apk
           path: build/app/outputs/flutter-apk/app-fdroid-release.apk
